--- a/app/views/families/_activities.html.haml
+++ b/app/views/families/_activities.html.haml
@@ -1,5 +1,5 @@
 %div.well.well-sm
-  %h4= t('views.activity')
+  %h4= t('activity')
   -activities.each do |activity|
     .panel.panel-default
       -if activity.type_id == 1
@@ -7,11 +7,11 @@
           = link_to image_tag(gravatar_for(activity.user, 25), class: "img-rounded"), user_path(activity.user)
           = time_ago_in_words(Time.zone.at(activity.created_at))
         .panel-body
-          %em= t('views.activity_completion', who: activity.user.name, what: activity.message)
+          %em= t('activity_completion', who: activity.user.name, what: activity.message)
       -elsif activity.type_id == 2
         .panel-heading
           = link_to image_tag(gravatar_for(activity.family, 25), class: "img-rounded"), family_path(activity.family)
           = time_ago_in_words(Time.zone.at(activity.created_at))
         .panel-body
           -info = activity.message.split(',')
-          %em= t('views.activity_assign_meal', who:info[0], what: Date.parse(info[1]).strftime("%A, %m/%d"))
+          %em= t('activity_assign_meal', who:info[0], what: Date.parse(info[1]).strftime("%A, %m/%d"))
