--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -20,7 +20,7 @@
   }
 
 .lead.well.well-sm{align: "center"}
-  = t('views.blank_family', family: @family.name)
+  = t('blank_family', family: @family.name)
 
 .well.well-sm{align: "center"}
   = form_tag sessions_path do
