--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 .jumbotron
   %h1 Maple Leaf Family
   %p
-    .lead Helping families promote good digital citizenship and social media awareness
+    .lead= t('about_us')
   %p
     =link_to t('sign_up'), signup_path, remote: true, class: "btn btn-primary"
