--- a/app/views/users/_multi.html.haml
+++ b/app/views/users/_multi.html.haml
@@ -5,11 +5,11 @@
 
 %ul.nav.nav-tabs{:role => "tablist"}
   %li.active
-    %a{"data-toggle" => "tab", :href => "#task", :role => "tab"}= t('views.add_task')
+    %a{"data-toggle" => "tab", :href => "#task", :role => "tab"}= t('add_task')
   %li
-    %a{"data-toggle" => "tab", :href => "#social", :role => "tab"}= t('views.social_media')
+    %a{"data-toggle" => "tab", :href => "#social", :role => "tab"}= t('social_media')
   %li
-    %a{"data-toggle" => "tab", :href => "#edit", :role => "tab"}= t('views.edit')
+    %a{"data-toggle" => "tab", :href => "#edit", :role => "tab"}= t('edit')
 
 .tab-content
   #task.tab-pane.fade.in.active
