--- a/app/views/users/_new.html.haml
+++ b/app/views/users/_new.html.haml
@@ -1,7 +1,7 @@
 .modal-header
   .lead
     -if current_user
-      = t('views.add_family_member')
+      = t('add_family_member')
     -else
-      = t('views.create_account')
+      = t('create_account')
 = render "form"
