--- a/app/views/users/_social_medium.html.haml
+++ b/app/views/users/_social_medium.html.haml
@@ -2,7 +2,7 @@
   .pull-right
     = link_to content_tag(:i, nil, class: "fa fa-remove fa-2x"), "", data: {dismiss: "modal"}
   %h3
-    =t('views.social_media')
+    =t('social_media')
 .modal-body
   %table.table.table-hover{style: "width:100%;"}
     %tbody
