--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -5,7 +5,7 @@
     = f.text_area :description, rows: "3", maxlength: "255"
     = f.collection_select :user_id, (current_user.parent? ? @users : [current_user]), :id, :name, selected: params[:user_id]
     = f.datetime_select :start_time
-    = f.submit t('views.save'),class: "btn btn-primary"
-    = link_to t('views.cancel'), "", class: "btn btn-default", data: {dismiss: "modal"}
+    = f.submit t('save'),class: "btn btn-primary"
+    = link_to t('cancel'), "", class: "btn btn-default", data: {dismiss: "modal"}
     -if params[:action] == "edit"
-      = link_to t('views.delete'), @meal, method: :delete, data: {confirm: t('views.are_you_sure')}, class: "btn btn-danger"
+      = link_to t('delete'), @meal, method: :delete, data: {confirm: t('are_you_sure')}, class: "btn btn-danger"
