--- a/app/views/social_medium/_instagram.html.haml
+++ b/app/views/social_medium/_instagram.html.haml
@@ -13,11 +13,11 @@
     %table{width: "100%"}
       %tr
         %td
-          %strong= "#{@info['counts']['media']} #{t('views.posts')}"
+          %strong= "#{@info['counts']['media']} #{t('posts')}"
         %td{align: 'center'}
-          %strong= link_to "#{@info['counts']['followed_by']} #{t('views.followers')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'followers'), remote: true
+          %strong= link_to "#{@info['counts']['followed_by']} #{t('followers')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'followers'), remote: true
         %td{align: 'right'}
-          %strong= link_to "#{@info['counts']['follows']} #{t('views.following')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'following'), remote: true
+          %strong= link_to "#{@info['counts']['follows']} #{t('following')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'following'), remote: true
 
 #results
   = render 'instagram_feed'
