--- a/app/views/social_medium/_facebook_feed.html.haml
+++ b/app/views/social_medium/_facebook_feed.html.haml
@@ -11,12 +11,25 @@
           = post['from']['name']
       .panel-body
         %div
-          = post['message'] || post['story']
+          %p= post['message'] || post['story']
+          -if post['comments']
+            %ul.list-group{style: "padding-left:0px;"}
+              -post['comments']['data'].each do |comment|
+                %li.list-group-item
+                  .list-group-item-heading
+                    .pull-right
+                      =t('likes')
+                      .badge= comment['like_count']
+                      = time_ago_in_words(Time.at(DateTime.parse(comment['created_time'])))
+                    = link_to comment['from']['name'], "http://facebook.com/#{comment['from']['id']}", target: :blank
+                  %p.list-group-item-text= comment['message']
+
+
   -if last_post
     #more-loading{style: 'display:none;', align: 'center'}
       %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
         %h4.list-group-item.active
-          %i.fa.fa-spinner.fa-spin
+          %i.fa.fa-circle-o-notch.fa-spin
     #more-results
       %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
         %h4= link_to t("load_more"), more_results_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: last_post.id), remote: true, class: "list-group-item active", onclick: "loadingMoreSocialMedia();"
