--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -33,7 +33,7 @@
             %tr
               %td{colspan: '2'}
                 -@user.social_medium.each do |feed|
-                  =link_to content_tag(:i, nil, class: "fa fa-#{feed.css_class} fa-2x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true, onclick: "loadingSocialMedia();"
+                  =link_to content_tag(:i, nil, class: "fa fa-#{feed.css_class} fa-3x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true, onclick: "loadingSocialMedia();"
               %td{style: "width:32px;"}
 
     .panel-body.hidden-xs
@@ -64,4 +64,4 @@
         .panel-body
           - @user.social_medium_stat.format_data.each do |k,v|
             = content_tag(:i, " #{k.titleize}", class: "fa fa-#{k} fa-2x")
-            = column_chart v, height: "150px"
+            = column_chart v, height: "150px", colors: ["#325d88","#93c54b","#f47c3c"], library: {legend: {labels: {boxWidth: 12}}, scales: {yAxes: [{ticks: {stepSize: 1}}]}}
