--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,8 @@
               = link_to t('family'), family_path(current_user.family)
             -else
               = link_to t('family'), new_family_path, remote: true
-          %li= link_to t('profile'), current_user
+          %li{class: "#{'active' if params[:controller] == 'users'}"}
+            = link_to t('profile'), current_user
           %li= link_to t('sign_out'), signout_path
         .collapse.navbar-collapse.navbar-ex1-collapse
 
