--- a/app/views/social_medium/_instagram_feed.html.haml
+++ b/app/views/social_medium/_instagram_feed.html.haml
@@ -4,13 +4,13 @@
     %table{style: "width:100%"}
       %tr
         -posts.each do |post|
-          %td{style: "width:33%;"}
+          %td{style: "width:33%;padding:5px;"}
             -last_post = post
             -if post
               -if post[:videos]
-                = link_to image_tag(post.images.thumbnail.url, class: 'feed-img'), instagram_post_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: post.id), remote: true
+                = link_to image_tag(post.images.thumbnail.url, class: 'img-rounded feed-img'), instagram_post_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: post.id), remote: true
               -else
-                = link_to image_tag(post.images.thumbnail.url, class: 'feed-img'), instagram_post_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: post.id), remote: true
+                = link_to image_tag(post.images.thumbnail.url, class: 'img-rounded feed-img'), instagram_post_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: post.id), remote: true
   -if last_post
     #more-loading{style: 'display:none;', align: 'center'}
       %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
