--- a/app/views/social_medium/_instagram_post.html.haml
+++ b/app/views/social_medium/_instagram_post.html.haml
@@ -1,24 +1,27 @@
 .modal-body{style: 'padding:0px;'}
-  .panel.panel-default
+  .panel.panel-default{style: 'margin-bottom:0px;'}
     .panel-heading
       %h3.panel-title
         .pull-right
           = link_to content_tag(:i, nil, class: "fa fa-remove fa-2x"), "", data: {dismiss: "modal"}
-        = time_ago_in_words(Time.zone.at(@post.created_time.to_i))
-        %span.glyphicon.glyphicon-heart
-        =@post.likes[:count]
+        = image_tag(@post.user[:profile_picture], size: "30x30", class: "img-rounded")
+        = @post.user[:username]
     .panel-body
-      %div
+      %div{style: 'margin:-15px -15px -15px -15px;'}
         -if @post[:videos]
           = video_tag(@post.videos.standard_resolution.url, controls: true, class: "feed-img")
         -else
           = image_tag(@post.images.standard_resolution.url, class: "feed-img")
-        %p= @post.caption.text if @post.caption
+      %p{style: 'padding-top:10px;'}
+        .pull-right
+          = time_ago_in_words(Time.zone.at(@post.created_time.to_i), scope: 'time_ago')
+        = content_tag(:i, " #{@post.likes[:count]}", class: "fa #{@post.user_has_liked ? 'fa-heart' : 'fa-heart-o'}")
+      %p= @post.caption.text if @post.caption
       -if @post[:comments][:data]
         - @post[:comments][:data].each do |comment|
           .media
             %a.pull-left{:href => "http://instagram.com/#{comment.from[:username]}"}
-              = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded media-object")
+              = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded")
             .media-body
               %h4.media-heading=link_to comment.from[:username], "http://instagram.com/#{comment.from[:username]}"
               = comment.text
