--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,14 +1,55 @@
-.modal-body
-  = bootstrap_form_for(@user, layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-7", remote: true) do |f|
-    .errors
-    = f.text_field :name, label: t('name')
-    = f.email_field :email, label: t('email')
-    = f.password_field :password, label: t('password')
-    = f.password_field :password_confirmation, label: t('confirm_password')
-    - if current_user
-      -# = f.number_field :credits, placeholder: 0
-      -# = f.number_field :allowance, placeholder: 0, label: t('allowance')
-      = f.number_field :pin, :maxlength => 4
-      = f.form_group :parent do
-        = f.check_box :parent
-    = f.submit t('save'), class: "btn btn-primary"
+%form.form-horizontal{"accept-charset" => "UTF-8", :action => (@user.id ? user_path(@user) : '/users'), "data-remote" => "true", :method => (@user.id ? "patch" : "post"), :role => "form"}
+  %div{:style => "display:none"}
+    %input{:name => "utf8", :type => "hidden", :value => "✓"}/
+  .errors
+  .form-group
+    %label.col-md-3.control-label{:for => "name"}= t('name')
+    .col-md-9
+      %input#name.form-control{:type => "text", :name => 'user[name]', :value => @user.name}
+  .form-group
+    %label.col-md-3.control-label{:for => "email"}= t('email')
+    .col-md-9
+      %input#email.form-control{:type => "text", :name => 'user[email]', :value => @user.email}
+  .form-group
+    %label.col-md-3.control-label{:for => "password"}= t('password')
+    .col-md-9
+      %input#password.form-control{:type => "password", :name => 'user[password]'}
+  .form-group
+    %label.col-md-3.control-label{:for => "password_confirmation"}= t('confirm_password')
+    .col-md-9
+      %input#password_confirmation.form-control{:type => "password", :name => 'user[password_confirmation]'}
+  .form-group
+    %label.col-md-3.control-label{:for => "pin"}= t('pin')
+    .col-md-9
+      %input#pin.form-control{:type => "number", :name => 'user[pin]', :value => @user.pin}
+  -if current_user
+    .form-group
+      %label.col-md-3.control-label= t('parent')
+      .col-md-9
+        .material-switch{style: 'padding:12px 0px 0px 12px;'}
+          %input{:name => "user[parent]", :type => "hidden", :value => 'off'}
+          %input#parent{:name => "user[parent]", :type => "checkbox", :checked => @user.parent}
+          %label.label-success{:for => "parent"}
+  -else
+    %input{:name => "user[parent]", :type => "hidden", :value => 'on'}
+  .form-group
+    %label.col-md-3.control-label
+    .col-md-9{align: 'right'}
+      %input.btn.btn-primary{:name => "commit", :type => "submit", :value => t('save')}/
+
+
+
+  -# = bootstrap_form_for(@user, layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-7", remote: true) do |f|
+  -#   .errors
+  -#   = f.text_field :name, label: t('name')
+  -#   = f.email_field :email, label: t('email')
+  -#   = f.password_field :password, label: t('password')
+  -#   = f.password_field :password_confirmation, label: t('confirm_password')
+  -#   - if current_user
+  -#     -# = f.number_field :credits, placeholder: 0
+  -#     -# = f.number_field :allowance, placeholder: 0, label: t('allowance')
+  -#     = f.number_field :pin, :maxlength => 4
+  -#     = f.form_group :parent do
+  -#       = f.check_box :parent
+    %div{align: 'right'}
+      = f.submit t('save'), class: "btn btn-primary"
