--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -27,7 +27,7 @@
         %thead
           %tr
             %th= t('social_media')
-            %th{style: "width:32px;", align: 'right'}= link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), social_medium_users_path(id: @user.id), remote: true
+            %th{style: "width:32px;", align: 'right'}= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
         %tbody
           -if @user.social_medium.any?
             %tr
@@ -42,7 +42,7 @@
         %thead
           %tr
             %th= t('social_media')
-            %th= link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), social_medium_users_path(id: @user.id), remote: true
+            %th= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
         %tbody
           -if @user.social_medium.any?
             -@user.social_medium.each do |feed|
