--- a/app/views/families/update.js.erb
+++ b/app/views/families/update.js.erb
@@ -17,6 +17,6 @@ var el = $('.errors');
 
 <% else %>
 
-  window.location.replace("<%= family_path(@family) %>");
+  location.reload(true);
 
 <% end %>
