--- a/app/views/families/edit.js.erb
+++ b/app/views/families/edit.js.erb
@@ -1,2 +1,2 @@
-$("#inner-modal").html("<%= escape_javascript(render 'edit') %>");
-$("#modal").modal("show");
+$("#user-results").html("<%= escape_javascript(render 'edit') %>");
+$("#user-results").show();
