--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,19 +1,22 @@
 var el = $('.errors');
 
 <% if @user.errors.any? %>
-  
-  // Create a list of errors
+
   var errors = $('<ul />');
 
   <% @user.errors.full_messages.each do |error| %>
     errors.append("<li><%= escape_javascript( error ) %></li>");
   <% end %>
-  // Display errors on form
+
+  <% @user.errors.messages.each do |k,v| %>
+    $('#<%= k.to_s %>').parent().parent().addClass('has-error');
+  <% end %>
+
   el.html(errors);
   el.addClass('alert alert-danger');
 
 <% else %>
 
   location.reload(true);
-    
+
 <% end %>
