--- a/app/views/users/_social_medium.html.haml
+++ b/app/views/users/_social_medium.html.haml
@@ -4,6 +4,9 @@
   %h3
     =t('social_media')
 .modal-body
+  .alert.alert-dismissible.alert-warning
+    %h4= t('enable_disable_social')
+    %p= t('enable_disable_social_info')
   %table.table.table-hover{style: "width:100%;"}
     %tbody
       %tr
