--- a/app/views/social_medium/_instagram.html.haml
+++ b/app/views/social_medium/_instagram.html.haml
@@ -12,12 +12,14 @@
           = link_to @info['website'], @info['website'], target: :blank
     %table{width: "100%"}
       %tr
-        %td
+        %td{align: 'center'}
           %strong= "#{@info['counts']['media']} #{t('posts')}"
         %td{align: 'center'}
           %strong= link_to "#{@info['counts']['followed_by']} #{t('followers')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'followers'), remote: true
-        %td{align: 'right'}
+        %td{align: 'center'}
           %strong= link_to "#{@info['counts']['follows']} #{t('following')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'following'), remote: true
+        -# %td{align: 'center'}
+        -#   %strong= link_to t("liked"), relationships_user_social_medium_index_path(@user, feed_id: @feed.id, relationship_type: 'liked'), remote: true
 
 #results
   = render 'instagram_feed'
