--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -19,31 +19,39 @@
     $('#id').val(x);
   }
 
-.lead.well.well-sm{align: "center"}
-  = t('blank_family', family: @family.name)
+.panel.panel-default
+  .panel-heading
+    %h4= t('blank_family', family: @family.name)
+  .panel-body{align: 'center'}
+    %form.form-horizontal{"accept-charset" => "UTF-8", :action => sessions_path, "data-remote" => "true", :method => "post", :role => "form"}
+      %div{:style => "display:none"}
+        %input{:name => "utf8", :type => "hidden", :value => "✓"}
+        %input#id{:name => "id", :type => "hidden", :value => @users.first.id}
+      .error
+      #child-login.carousel.slide{"data-ride" => "carousel"}
+        / Indicators
+        %ol.carousel-indicators
+          - c = 0
+          -@users.each_slice(1) do |user|
+            %li{"data-slide-to" => "#{c}", "data-target" => "#carousel-example-generic", class: "#{'active' if user == @users.first}"}
+            - c += 1
+        / Wrapper for slides
+        .carousel-inner
+          -@users.each do |user|
+            .item{id: "#{user.id}", class: "#{'active' if user == @users.first}"}
+              %img{:alt => "...", :src => "#{gravatar_for(user, 400)}"}/
 
-.well.well-sm{align: "center"}
-  = form_tag sessions_path do
-    = hidden_field_tag :id, params[:id], value: @family.children.first.id
-    #child-login.carousel.slide{"data-ride" => "carousel"}
-      / Indicators
-      %ol.carousel-indicators
-        - c = 0
-        -@family.children.each_slice(1) do |user|
-          %li{"data-slide-to" => "#{c}", "data-target" => "#carousel-example-generic", class: "#{'active' if user == @family.children.first}"}
-          - c += 1
-      / Wrapper for slides
-      .carousel-inner
-        -@family.children.each do |user|
-          .item{id: "#{user.id}", class: "#{'active' if user == @family.children.first}"}
-            %img{:alt => "...", :src => "#{gravatar_for(user, 400)}"}/
-
-      / Controls
-      %a.left.carousel-control{"data-slide" => "prev", :href => "#child-login", :role => "button"}
-        %span.fa.fa-chevron-left
-      %a.right.carousel-control{"data-slide" => "next", :href => "#child-login", :role => "button"}
-        %span.fa.fa-chevron-right
-    / Carousel
-    .form-group
-      = password_field_tag :pin, '', placeholder: t('pin'), class: "form-control"
-    %button.btn.btn-primary.btn-sm{:type => "submit"}= t('sign_in')
+        / Controls
+        %a.left.carousel-control{"data-slide" => "prev", :href => "#child-login", :role => "button"}
+          %span.fa.fa-chevron-left
+        %a.right.carousel-control{"data-slide" => "next", :href => "#child-login", :role => "button"}
+          %span.fa.fa-chevron-right
+      / Carousel
+      .form-group{style: 'padding-top:15px;'}
+        -# %label.col-md-3.control-label{:for => "pin"}= t('pin')
+        .col-md-12
+          %input#pin.form-control{:type => "password", :name => 'pin', :placeholder => t('pin'), :value => params[:pin]}
+      -# .form-group
+      -#   = password_field_tag :pin, '', placeholder: t('pin'), class: "form-control"
+      %div{align: 'center'}
+        %button.btn.btn-primary.btn-sm{:type => "submit"}= t('sign_in')
