--- a/app/views/families/_form.html.haml
+++ b/app/views/families/_form.html.haml
@@ -1,15 +1,22 @@
 %form.form-horizontal{"accept-charset" => "UTF-8", :action => (@family.id ? family_path(@family) : '/families'), "data-remote" => "true", :method => (@family.id ? "patch" : "post"), :role => "form"}
   %div{:style => "display:none"}
     %input{:name => "utf8", :type => "hidden", :value => "✓"}/
-  .errors
+  .form-group{style: "margin-bottom:0px;"}
+    %label.col-md-3.control-label
+    .col-md-9
+      .errors
   .form-group
     %label.col-md-3.control-label{:for => "name"}= t('name')
     .col-md-9
       %input#name.form-control{:type => "text", :name => 'family[name]', :value => @family.name}
+      -unless @family.id
+        .text-muted= t('family_name_info')
   .form-group
     %label.col-md-3.control-label{:for => "url"}= t('family_id')
     .col-md-9
       %input#url.form-control{:type => "text", :name => 'family[url]', :value => @family.url}
+      -unless @family.id
+        .text-muted= t('family_id_info')
   .form-group
     %label.col-md-3.control-label
     .col-md-9{align: 'right'}
