--- a/app/views/families/_new.html.haml
+++ b/app/views/families/_new.html.haml
@@ -1,4 +1,5 @@
-.modal-header
-  .lead
-    = t('create_join_family')
-= render "form"
+.panel.panel-default
+  .panel-heading
+    %h4= t('create_join_family')
+  .panel-body
+    = render "form"
