--- a/app/views/families/create.js.erb
+++ b/app/views/families/create.js.erb
@@ -17,6 +17,6 @@ var el = $('.errors');
 
 <% else %>
 
-  window.location.replace("<%= family_path(@family) %>");
+  window.location = ("<%= family_path(@family) %>");
 
 <% end %>
