--- a/app/views/families/new.js.erb
+++ b/app/views/families/new.js.erb
@@ -1,2 +1,2 @@
-$("#inner-modal").html("<%= escape_javascript(render 'new') %>");
-$("#modal").modal("show");
+$("#user-results").html("<%= escape_javascript(render 'new') %>");
+$("#user-results").show();
