--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,7 +1,10 @@
 %form.form-horizontal{"accept-charset" => "UTF-8", :action => (@user.id ? user_path(@user) : '/users'), "data-remote" => "true", :method => (@user.id ? "patch" : "post"), :role => "form"}
   %div{:style => "display:none"}
     %input{:name => "utf8", :type => "hidden", :value => "✓"}/
-  .errors
+  .form-group{style: "margin-bottom:0px;"}
+    %label.col-md-3.control-label
+    .col-md-9
+      .errors
   .form-group
     %label.col-md-3.control-label{:for => "name"}= t('name')
     .col-md-9
